fix bug with image not filling width on Firefox

--- a/components/Testimonial/Testimonial.module.scss
+++ b/components/Testimonial/Testimonial.module.scss
@@ -46,6 +46,12 @@
     clip-path: url(#testimonialClipPath);
     width: 300px;
     height: 300px;
+
+    & span,
+    & img {
+        width: 300px !important;
+        height: 300px !important;
+    }
 }
 
 .imageContainer {
